@@ -18,6 +18,7 @@ type beater struct {
 	mutex   sync.Mutex // guards server and stopped
 	server  *http.Server
 	stopped bool
+	logger  *logp.Logger
 }
 
 // Creates beater
@@ -41,6 +42,7 @@ func New(b *beat.Beat, ucfg *common.Config) (beat.Beater, error) {
 	bt := &beater{
 		config:  beaterConfig,
 		stopped: false,
+		logger:  logp.NewLogger("beater"),
 	}
 	return bt, nil
 }
@@ -48,7 +50,7 @@ func New(b *beat.Beat, ucfg *common.Config) (beat.Beater, error) {
 func (bt *beater) Run(b *beat.Beat) error {
 	var err error
 
-	pub, err := newPublisher(b.Publisher, bt.config.ConcurrentRequests)
+	pub, err := newPublisher(b.Publisher, bt.config.ConcurrentRequests, bt.config.ShutdownTimeout)
 	if err != nil {
 		return err
 	}
@@ -56,7 +58,7 @@ func (bt *beater) Run(b *beat.Beat) error {
 
 	lis, err := net.Listen("tcp", bt.config.Host)
 	if err != nil {
-		logp.Err("failed to listen: %s", err)
+		bt.logger.Errorf("failed to listen: %s", err)
 		return err
 	}
 	go notifyListening(bt.config, pub.Send)
@@ -72,7 +74,7 @@ func (bt *beater) Run(b *beat.Beat) error {
 
 	err = run(bt.server, lis, bt.config)
 	if err == http.ErrServerClosed {
-		logp.Info("Listener stopped: %s", err.Error())
+		bt.logger.Infof("Listener stopped: %s", err.Error())
 		return nil
 	}
 	return err
@@ -80,10 +82,11 @@ func (bt *beater) Run(b *beat.Beat) error {
 
 // Graceful shutdown
 func (bt *beater) Stop() {
-	logp.Info("stopping apm-server...")
+	bt.logger.Infof("stopping apm-server... waiting maximum of %v seconds for queues to drain",
+		bt.config.ShutdownTimeout.Seconds())
 	bt.mutex.Lock()
 	if bt.server != nil {
-		stop(bt.server, bt.config.ShutdownTimeout)
+		stop(bt.server)
 	}
 	bt.stopped = true
 	bt.mutex.Unlock()
